--- a/debian/rules
+++ b/debian/rules
@@ -28,7 +28,7 @@ override_dh_auto_build: ${PY2VERS:%=build-python%}
 install-python2%:
 	dh_testdir
 	python2$* setup.py install --force --root ${PY2DIR} --no-compile -O0 --install-layout=deb --install-data=${DATAPATH}
-	cp ${DATADIR}RestAuth/config/localsettings.py.example ${PY2DIR}usr/lib/python2$*/dist-packages/RestAuth/RestAuth/localsettings.py
+#	cp ${DATADIR}RestAuth/config/localsettings.py.example ${PY2DIR}usr/lib/python2$*/dist-packages/RestAuth/RestAuth/localsettings.py
 
 override_dh_auto_install: ${PY2VERS:%=install-python%}
 	# strip .py extensions
@@ -47,20 +47,18 @@ override_dh_auto_install: ${PY2VERS:%=install-python%}
 	mkdir ${DATADIR}uwsgi
 	mv ${DATADIR}RestAuth/uwsgi/uwsgi.ini ${DATADIR}uwsgi/
 
-	# move to pyshared dir so dh_python2 picks it up
-	mkdir -p ${PY2MOD}RestAuth/RestAuth
-	rm ${DATADIR}RestAuth/config/localsettings.py.example
-	rm ${DATADIR}RestAuth/config/__init__.py
-
 	# remove empty directories:
-	rmdir ${DATADIR}RestAuth/config
 	rmdir ${DATADIR}RestAuth/doc
 	rmdir ${DATADIR}RestAuth/munin
 	rmdir ${DATADIR}RestAuth/uwsgi
+	rm -r ${DATADIR}RestAuth/config/
 	rmdir ${DATADIR}RestAuth/
 	
 override_dh_python2:
+	cp RestAuth/RestAuth/localsettings.py.example RestAuth/RestAuth/localsettings.py
 	dh_python2
+
+	# move shared file to /etc, dh_symlink restores source as symlink
 	mv ${PY2DIR}usr/share/pyshared/RestAuth/RestAuth/localsettings.py ${PY2DIR}etc/restauth/settings.py
 
 test-python%:
