--- a/RestAuth/RestAuth/localsettings.py.example
+++ b/RestAuth/RestAuth/localsettings.py.example
@@ -32,6 +32,9 @@
 #       administrator, but you can always set any of the other settings available in Django, if you
 #       know what you are doing.
 
+import os
+# Build paths inside the project like this: os.path.join(BASE_DIR, ...)
+BASE_DIR = os.path.dirname(os.path.dirname(__file__))
 
 ###############
 ### GENERAL ###
