--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -5,4 +5,6 @@ ipython==3.0.0
 jsonschema>=2.4.0
 pip-tools>=0.3.5
 pymongo==2.8
+#requires libsasl2-dev libldap2-dev
+python-ldap==2.4.19
 redis==2.10.3
