--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ env:
   #- DJANGO_VERSION="<1.11"
   #- DJANGO_VERSION="<1.9"
 install:
-  # Build/test dependencies
+ - pip install -U pip setuptools
  - pip install -r requirements.txt -r requirements-dev.txt
  - pip install Django$DJANGO_VERSION
 #before_script:
