--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-Django==1.7.5
-PyYAML>=3.11
+Django==1.11.3
+PyYAML==3.12
 RestAuthCommon>=0.7.0
-python-mimeparse>=0.1.4
-django-hashers-passlib>=0.2
+python-mimeparse>=1.6.0
+django-hashers-passlib==0.3
