--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,7 +1,9 @@
 Sphinx==1.6.3
 coverage==4.4.1
+flake8==3.3.0
 hiredis==0.2.0
 ipython==6.1.0
+isort==4.2.15
 jsonschema==2.6.0
 pymongo==3.4.0
 python-ldap==2.4.41 ; python_version < '3'
