set line_length

--- a/.isort.cfg
+++ b/.isort.cfg
@@ -4,3 +4,4 @@ force_single_line = true
 known_django=django
 known_standard_library=ipaddress
 sections=FUTURE,STDLIB,THIRDPARTY,DJANGO,FIRSTPARTY,LOCALFOLDER
+line_length=110
