--- a/.isort.cfg
+++ b/.isort.cfg
@@ -2,6 +2,7 @@
 skip=migrations
 force_single_line = true
 known_django=django
+known_ra=RestAuthCommon
 known_standard_library=ipaddress
-sections=FUTURE,STDLIB,THIRDPARTY,DJANGO,FIRSTPARTY,LOCALFOLDER
+sections=FUTURE,STDLIB,THIRDPARTY,DJANGO,RA,FIRSTPARTY,LOCALFOLDER
 line_length=110
