--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,9 @@ language: python
 python:
   #- "2.7"
   - "3.4"
-  #- "3.5"
-  #- "3.6"
-  #- "nightly"
+  - "3.5"
+  - "3.6"
+  - "nightly"
 env:
   - DJANGO_VERSION=">=1.11"
   #- DJANGO_VERSION="<1.11"
