--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,14 @@ script:
   - python setup.py code_quality
   - python setup.py test
   - python setup.py install
+matrix:
+    exclude:
+		- env: DJANGO_VERSION="2.0.10"
+          python: "2.7"
+		- env: DJANGO_VERSION="2.1.5"
+          python: "2.7"
+		- env: DJANGO_VERSION="2.1.5"
+          python: "3.4"
 
 #notifications:
 #  irc:
