--- a/.travis.yml
+++ b/.travis.yml
@@ -8,13 +8,13 @@ python:
   - "3.7"
   - "nightly"
 env:
-  - DJANGO_VERSION="1.11.15"
-  - DJANGO_VERSION="2.0.10"
-  - DJANGO_VERSION="2.1.5"
+  - DJANGO=1.11.15
+  - DJANGO=2.0.10
+  - DJANGO=2.1.5
 install:
  - pip install -U pip setuptools
  - pip install -r requirements.txt -r requirements-dev.txt
- - pip install Django==$DJANGO_VERSION
+ - pip install Django==$DJANGO
 #before_script:
 script:
   - python setup.py code_quality
@@ -22,11 +22,11 @@ script:
   - python setup.py install
 matrix:
     exclude:
-		- env: DJANGO_VERSION="2.0.10"
+		- env: DJANGO=2.0.10
           python: "2.7"
-		- env: DJANGO_VERSION="2.1.5"
+		- env: DJANGO=2.1.5
           python: "2.7"
-		- env: DJANGO_VERSION="2.1.5"
+		- env: DJANGO=2.1.5
           python: "3.4"
 
 #notifications:
