--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-Django==1.11.18
-PyYAML==3.13
+Django==3.2.16
+PyYAML==6.0
 RestAuthCommon>=0.7.0
 python-mimeparse>=1.6.0
 django-hashers-passlib==0.4
+six>=1.16.0
