--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -7,6 +7,6 @@ ipython
 isort==4.3.4
 jsonschema==2.6.0
 pymongo==3.4.0
-python-ldap==2.4.41 ; python_version < '3'
+python-ldap>=3.4.0
 redis==3.0.1
 sphinx-rtd-theme==0.4.2
